Fix text alignment

--- a/css/main.css
+++ b/css/main.css
@@ -52,7 +52,7 @@ ul.posts span {
 
 .site {
   font-size: 155%;
-  text-align: justify;
+  text-align: left;
   width: 95%;
   max-width: 33em;
   margin: 1em auto 1em;
@@ -96,7 +96,6 @@ footer {
   border-top: 1px dotted #ddd;
   margin-top: 0.5em;
   overflow: hidden;
-  text-align: left;
 }
 
 /* Posts */
@@ -109,7 +108,6 @@ footer {
   font-size: 205%;
   margin-bottom: 0.3em;
   line-height: 1em;
-  text-align: left;
 }
 
 #post h2 {
@@ -125,7 +123,6 @@ footer {
 }
 
 #post p {
-  text-align: left;
   line-height: 1.5em;
 }
 
